unpackaged/main/default/objects/OrderApi__Badge_Type__c/OrderApi__Badge_Type__c.object-meta.xml
<CustomObject>
    <description>Configure Badge Types to assign to Contacts to allow greater control and flexibility around pricing and content accessibility.</description>
    <label>Badge Type</label>
    <nameField>
        <label>Badge Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Badge Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>