unpackaged/main/default/objects/OrderApi__Badge_Type__c/fields/OrderApi__Description__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Description__c</fullName>
    <description>Optional description of the Badge Type</description>
    <inlineHelpText>Optional description of the Badge Type</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>