unpackaged/main/default/objects/OrderApi__Badge_Type__c/fields/OrderApi__Enable_Badge_Flow_down__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Enable_Badge_Flow_down__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked and when the badge is assigned to an account, all contacts of that account, child accounts, and child account&#39;s contacts will inherit the benefits. Limited to only one level of child accounts.</description>
    <inlineHelpText>When checked and when the badge is assigned to an account, all contacts of that account, child accounts, and child account&#39;s contacts will inherit the benefits. Limited to only one level of child accounts.</inlineHelpText>
    <label>Enable Badge Flow-down</label>
    <type>Checkbox</type>
</CustomField>