unpackaged/main/default/objects/OrderApi__Badge_Type__c/fields/OrderApi__Engagement_Score__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Engagement_Score__c</fullName>
    <description>The engagement score that is to be assigned to the entity&#39;s badge record.</description>
    <inlineHelpText>The engagement score that is to be assigned to the entity&#39;s badge record.</inlineHelpText>
    <label>Engagement Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>