unpackaged/main/default/objects/OrderApi__Badge_Type__c/fields/OrderApi__Icon__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Icon__c</fullName>
    <description>** System Calculated ** Badge Image Icon -- displayed in most Contact Badge list views.</description>
    <formula>IMAGE(IF(ISBLANK(OrderApi__Icon_Location__c),&#39;https://s3.us-east-1.amazonaws.com/fonteva-customer-media/00D1U000000FLVyUAO/WcRwRzNr_placeholder_svg&#39;,OrderApi__Image_Location__c), Name,12,12)</formula>
    <inlineHelpText>** System Calculated ** Badge Image Icon -- displayed in most Contact Badge list views.</inlineHelpText>
    <label>Icon</label>
    <type>Text</type>
</CustomField>