unpackaged/main/default/objects/OrderApi__Badge_Type__c/fields/OrderApi__Icon_Location__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Icon_Location__c</fullName>
    <description>** System Calculated Override ** Override the default Badge Type icon with a custom image to distinguish the Badge Type from other Badge Types.</description>
    <inlineHelpText>** System Calculated Override ** Override the default Badge Type icon with a custom image to distinguish the Badge Type from other Badge Types.</inlineHelpText>
    <label>Icon Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>