unpackaged/main/default/objects/OrderApi__Badge_Type__c/fields/OrderApi__Image__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Image__c</fullName>
    <description>** System Calculated ** Preview the Badge Image configured for the Badge Type.</description>
    <formula>IMAGE(IF(ISBLANK(OrderApi__Image_Location__c),&#39;https://s3.us-east-1.amazonaws.com/fonteva-customer-media/00D1U000000FLVyUAO/WcRwRzNr_placeholder_svg&#39;,OrderApi__Image_Location__c),  Name)</formula>
    <inlineHelpText>** System Calculated ** Preview the Badge Image configured for the Badge Type.</inlineHelpText>
    <label>Image</label>
    <type>Text</type>
</CustomField>