unpackaged/main/default/objects/OrderApi__Badge_Type__c/fields/OrderApi__Image_Location__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Image_Location__c</fullName>
    <description>Distinguish the Badge Type from other Badge Types by providing the URL to a securely hosted image to use as the Badge Type Image.</description>
    <inlineHelpText>Distinguish the Badge Type from other Badge Types by providing the URL to a securely hosted image to use as the Badge Type Image.</inlineHelpText>
    <label>Image Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>