unpackaged/main/default/objects/OrderApi__Badge_Type__c/fields/OrderApi__Is_Active__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked the Badge Type is active and available for assignment to a Contact</description>
    <inlineHelpText>When checked the Badge Type is active and available for assignment to a Contact</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>