unpackaged/main/default/objects/OrderApi__Badge_Type__c/fields/OrderApi__Is_Published__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Published__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, Contacts assigned Badge related to the Badge Type will have the option to display the Badge on their Community Profile (valid only if Fonteva Communities is enabled for your environment - contact your administrator if you have any questions)</description>
    <inlineHelpText>When checked, Contacts assigned Badge related to the Badge Type will have the option to display the Badge on their Community Profile (valid only if Fonteva Communities is enabled for your environment - contact your administrator if you have any questions)</inlineHelpText>
    <label>Is Published</label>
    <type>Checkbox</type>
</CustomField>