unpackaged/main/default/objects/OrderApi__Badge_Type__c/fields/OrderApi__Public_Description__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Public_Description__c</fullName>
    <description>The contents of this field will publish to the community portal.</description>
    <inlineHelpText>The contents of this field will publish to the community portal.</inlineHelpText>
    <label>Public Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>