unpackaged/main/default/objects/OrderApi__Badge_Type__c/fields/OrderApi__Short_Description__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Short_Description__c</fullName>
    <description>Optional (but highly recommended) short description used on reports and to provide context to end users looking at a list of Contacts assigned to various badges.</description>
    <inlineHelpText>Optional (but highly recommended) short description used on reports and to provide context to end users looking at a list of Contacts assigned to various badges.</inlineHelpText>
    <label>Short Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>