unpackaged/main/default/objects/OrderApi__Badge_Type__c/listViews/OrderApi__All.listView-meta.xml
<ListView>
    <fullName>OrderApi__All</fullName>
    <columns>NAME</columns>
    <columns>OrderApi__Icon__c</columns>
    <columns>OrderApi__Is_Published__c</columns>
    <columns>OrderApi__Is_Active__c</columns>
    <columns>OrderApi__Enable_Badge_Flow_down__c</columns>
    <columns>OrderApi__Short_Description__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>